--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
   "author": "Morgyn Peay",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "mongoose": "^7.6.3",
+    "nodemon": "^3.0.1",
+    "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1",
+    "mongodb": "^6.2.0",
+    "swagger-autogen": "^2.23.6"
   }
 }
