finished final part 2

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI="mongodb+srv://morgynkass:MKPKass2@cluster0.quzzzrp.mongodb.net/FinalNodeJS?retryWrites=true&w=majority"
+MONGODB_URI=mongodb+srv://morgynkass:MKPKass2@cluster0.quzzzrp.mongodb.net/FinalNodeJS?retryWrites=true&w=majority
