--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1",
+    "punycode": "^2.3.1",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
